# odometry_evaluation

./: CMakeLists.txt  cirs.txt  frames.gv  manifest.xml  package.xml  setup.py  test.txt
data/: .~lock.cirs.ods#  cirs.ods
data/filter/: data-mosaic.txt  data-odometer-filtered.txt  data-odometer.txt
data/gt/: MosaicRosesData.mat  MosaicRosesData_good.mat  cirs-circles.txt  cirs-run1.txt  cirs-run2.txt  cirs-survey1.txt  cirs-survey2.txt  cirs-timefixed-run3-joint.txt  cirs-timefixed-run3.txt  roses.txt  roses_rpy.txt
data/viso2/: viso2-cirs-circles.txt  viso2-cirs-run1.txt  viso2-cirs-run2.txt  viso2-cirs-run3.txt  viso2-cirs-survey1.txt  viso2-cirs-survey2.txt  viso2-cirs-timefixed-run3-wo-refinement.txt  viso2-cirs-timefixed-run3.txt
launch/: odometry_evaluation.launch
plots/: plots.sh  trajectories.gp  vpitch.gp  vr-err-100.gp  vr-err.gp  vroll.gp  vt-err-100.gp  vt-err.gp  vt.gp  vx.gp  vy.gp  vyaw.gp  vz.gp
scripts/: evaluate.py  extract_mosaic_data.m  extract_mosaic_gt.py  kitti_evaluation.py  load_odometry_data.m  sample_equal.py  sample_equal_by_distance.py  sample_equal_by_distance_mod.py  sample_equal_by_time.py  utils.py
scripts/odometry_evaluation/: compare_odom_and_pattern.py  evaluate.py  kitti_evaluation.py  prepare.py  publish_tfs.py  sample_equal.py
src/odometry_evaluation/: utils.py
