<package>
  <name>odometry_evaluation</name>
  <version>0.0.1</version>
  <description>Package for odometry evaluation</description>
  <author>Stephan Wirth</author>
  <author email="pl.negre@uib.cat">Pep Lluis Negre</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/srv/odometry_evaluation</url>
  <url type="bugtracker">https://github.com/srv/odometry_evaluation/issues</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>